--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
