--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://msingh17122000.github.io/manpreetsingh",
+  "homepage": "/",
   "name": "manpreetsingh",
   "version": "0.1.0",
   "private": true,
